--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
     <section class="hero">
         <div class="hero-content">
-            <p class="hero-label">Portfolio 2025</p>
+            <p class="hero-label">Portfolio</p>
             <h1>Hi, I'm <em>Ishaan</em>.<br>I build things with data.</h1>
             <p class="hero-description">Computer Science student at Baruch College with a background in finance and data analytics. I bring a unique perspective to problem solving.</p>
             <a href="#contact" class="hero-cta">
