--- a/index.html
+++ b/index.html
@@ -558,8 +558,8 @@
         </div>
         <div class="about-content fade-in">
             <div class="about-text">
-                <p>I'm a Computer Science student with a Finance degree and real world experience in data analytics and compliance.</p>
-                <p>After completing my Finance degree in 2022, I also have valuable experience at Protiviti working in AML compliance, Data Analyst at CUNY internships and at Maimonides Medical Center as Accounting Intern. Now I'm pursuing CS to combine my analytical background with technical skills.</p>
+                <p>I'm a Computer Science student at Baruch College with a Finance degree and real world experience in data analytics and financial analysis.</p>
+                <p>After completing my Finance degree in 2022, I also have valuable experience at Protiviti working in financial analysis, Data Analyst at CUNY internships and at Maimonides Medical Center as Accounting Intern. Now I'm pursuing CS to combine my analytical background with technical skills.</p>
                 <p>I'm passionate about using technology to solve complex problems and turning data into actionable insights.</p>
             </div>
             <div class="skills-grid">
@@ -567,6 +567,7 @@
                     <h4>Languages</h4>
                     <ul>
                         <li>Python</li>
+                        <li>Swift</li>
                         <li>SQL</li>
                         <li>JavaScript</li>
                         <li>HTML/CSS</li>
@@ -578,12 +579,13 @@
                         <li>Excel</li>
                         <li>Tableau</li>
                         <li>Git</li>
-                        <li>VS Code</li>
+                        <li>Xcode</li>
                     </ul>
                 </div>
                 <div class="skill-category">
                     <h4>Domains</h4>
                     <ul>
+                        <li>iOS Development</li>
                         <li>Data Analytics</li>
                         <li>Financial Analysis</li>
                         <li>Compliance (AML)</li>
@@ -673,6 +675,21 @@
                 </a>
             </div>
 
+            <div class="project-card fade-in">
+                <div class="project-number">02</div>
+                <h3><a href="https://apps.apple.com/us/app/divise/id6757889509" target="_blank" style="color: inherit; text-decoration: none; transition: color 0.3s ease;">Divise</a></h3>
+                <p>An iOS app that scans receipts and splits bills between friends. Built with SwiftUI and Apple's Vision framework for text recognition.</p>
+                <div class="project-tags">
+                    <span>Swift</span>
+                    <span>SwiftUI</span>
+                    <span>SwiftData</span>
+                    <span>Vision</span>
+                </div>
+                <a href="https://apps.apple.com/us/app/divise/id6757889509" target="_blank" style="display: inline-flex; align-items: center; gap: 0.5rem; margin-top: 1rem; color: var(--accent); text-decoration: none; font-size: 0.9rem;">
+                    App Store →
+                </a>
+            </div>
+
         </div>
     </section>
 
@@ -708,7 +725,7 @@
     </section>
 
     <footer>
-        <p>© 2025 Ishaan. All rights reserved.</p>
+        <p>© 2026 Ishaan Parmar</p>
         <p>Work Hard. Have Fun. Make History.</p>
     </footer>
 
